# apps/backend/src/systems/places/dto/create.ts
@@ -1,0 +1,6 @@
+import { IsString } from 'class-validator';
+
+export class PostBodyAddPlace {
+  @IsString()
+  name: string;
+}
